<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_recipe"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_recipe_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Delete Recipe" />

            <View
                android:id="@+id/blankFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="Save" />

        </LinearLayout>

        <EditText
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textAutoComplete"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/servings_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Serves " />

            <EditText
                android:id="@+id/servings_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/servings_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" people." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preptime_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Takes " />

            <EditText
                android:id="@+id/preptime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/preptime_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m to create." />
        </LinearLayout>

        <TextView
            android:id="@+id/ingredients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/ingredients_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ingredients_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_ingredient_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="525dp"
                android:background="#555"
                android:text="Add"
                android:textColor="#FFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/direction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/direction_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/directions_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_direction_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="525dp"
                android:background="#555"
                android:text="Add"
                android:textColor="#FFF" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>