<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_recipe"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transWhite"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="match_parent"
            android:layout_height="250sp" >
            <LinearLayout
                android:id="@+id/image_carousel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_copy_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:text="Copy Recipe" />

            <View
                android:id="@+id/blankFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="35" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginEnd="0dp"
                android:text="@string/edit_recipe" />


        </LinearLayout>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="cursive"
            android:text="@string/ingredients_label"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredients_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingLeft="30sp"
            android:text=""
            android:textSize="25sp" />

        <TextView
            android:id="@+id/direction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="cursive"
            android:text="@string/direction_label"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/directions_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text=""
            android:textSize="25sp" />

    </LinearLayout>
    </ScrollView>
