<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/amount_edit_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:text="TextView" />

    <Spinner
        android:id="@+id/metrics_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/metrics_string"
        android:layout_weight="1"
        android:gravity="right"/>

    <EditText
        android:id="@+id/ingredients_edit_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textAutoComplete"
        android:text="TextView" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:text="X"/>
</LinearLayout>